--- a/css/collective.css
+++ b/css/collective.css
@@ -69,7 +69,11 @@
     text-align: left;
   }
 
-  .pic1 {
+
+
+
+
+  .imagecontainer img {
     position: absolute;
     width: 413px;
     height: 248px;
@@ -78,20 +82,47 @@
     object-fit: cover;
     border-radius: 25px;
   }
-  .previous {
+  
+  .image-container img {
+    max-width: 100%;
+    max-height: 100%;
+    transition: transform 0.5s ease-in-out;
+  }
+
+
+  .prev{
     position: absolute;
     width: 38px;
-    height: 38px;
-    top: 117px;
+    height: 50px;
+    top: 99px;
     left: 48px;
+    font-size: 40px;
+    position: absolute;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+
   }
-  .next {
+
+  .next{
     position: absolute;
     width: 38px;
-    height: 38px;
-    top: 117px;
+    height: 50px;
+    top: 99px;
     left: 505px;
-  }
+    font-size: 40px;
+    position: absolute;
+    background-color: Transparent;
+    background-repeat:no-repeat;
+    border: none;
+    cursor:pointer;
+    overflow: hidden;
+
+
+}
+
 
   .days {
     display: flex;
@@ -428,4 +459,9 @@
     font-weight: 500;
     line-height: 32.48px;
     text-align: left;
+  }
+
+  .image-container img {
+    max-width: 100%;
+    max-height: 100%;
   }
