--- a/css/collective.css
+++ b/css/collective.css
@@ -21,6 +21,7 @@
     top: 28px;
     left: 1122px;
   }
+  
 
   .dk {
     position: absolute;
@@ -37,11 +38,12 @@
     margin: 161px 0 0 128px;
   }
 
-  .backbutton {
+  .back {
     position: absolute;
     width: 52px;
     height: 52px;
-    top: 17px;
+    top: 140px;
+    left: 114px;
   }
 
 
@@ -50,7 +52,7 @@
     position: relative;
     width: 1103px;
     height: 260px;
-    margin: -52px 0 0 128px;
+    margin: 176px 0 0 128px;
   }
 
   .text {
@@ -82,7 +84,6 @@
     object-fit: cover;
     border-radius: 25px;
   }
-  
   .image-container img {
     max-width: 100%;
     max-height: 100%;
@@ -465,3 +466,6 @@
     max-width: 100%;
     max-height: 100%;
   }
+
+  a { text-decoration: none;
+  text-decoration-color: none; }
