--- a/css/collective.css
+++ b/css/collective.css
@@ -1,6 +1,6 @@
 .all {
     position: relative;
-    width: 1280px;
+    max-width: 100%;
     height: 1412px;
     background: #f3eed8;
     overflow: hidden;
@@ -353,16 +353,15 @@
     width: 630px;
     height: 273px;
     margin: 30px 0 0 217px;
+    text-align: left;
   }
   .com1 {
-    position: relative;
     width: 305px;
     height: 273px;
     border: 1px solid #400b0b;
     border-radius: 25px;
   }
   .rating {
-    position: relative;
     width: 64px;
     height: 29px;
     margin: 81px 0 0 24px;
@@ -372,30 +371,19 @@
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
-    position: relative;
-    width: 281px;
-    height: 136.5px;
     margin: 10.75px 0 0 24px;
     font-family: 'Montserrat';
     color: #400b0b;
     font-size: 22px;
     font-weight: 400;
     line-height: 26.29px;
-    text-align: left;
   }
-  .D {
-    position: absolute;
-    width: 47px;
-    height: 49.35px;
-    top: 21px;
-    left: 20px;
-  }
+  
   .comname {
     display: flex;
     align-items: flex-start;
     justify-content: flex-start;
     position: absolute;
-    height: 33.6px;
     top: 28.35px;
     left: 87px;
     font-family: 'Montserrat';
@@ -403,7 +391,14 @@
     font-size: 28px;
     font-weight: 500;
     line-height: 32.48px;
-    text-align: left;
+  }
+
+  .D {
+    position: absolute;
+    width: 47px;
+    height: 49.35px;
+    top: 21px;
+    left: 20px;
   }
 
 
@@ -462,6 +457,9 @@
     text-align: left;
   }
 
+
+
+
   .image-container img {
     max-width: 100%;
     max-height: 100%;
@@ -469,3 +467,5 @@
 
   a { text-decoration: none;
   text-decoration-color: none; }
+
+  
