--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
   
   .all {
     position: relative;
-    width: 1280px;
+    max-width: 100%;
     height: 832px;
     background: #f3eed8;
     overflow: hidden;
